<resources>
    <string name="app_name">Think2Exam</string>
    <string name="title_home">Home</string>
    <string name="version">v 1.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_facts">Quick Facts</string>
    <string name="about_college">About College</string>
    <string name="about">About</string>
    <string name="college_image">Image of college</string>
    <string name="courses_offered">Courses Offered</string>
    <string name="facilities">Facilities</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="personal">Personal</string>
    <string name="applicaton">Application</string>
    <string name="your_name">Guest</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play_now">Play Now</string>
    <string name="welcome_quiz">Welcome</string>
    <string name="categories">Categories</string>
    <string name="question_num">Question 1/10</string>

    <string name="question_1">What is the current capital city of Australia?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="phone_dummy_data">+91-XXXXXXXXXX</string>
    <string name="save_changes">Save Changes</string>
    <string name="more">More</string>
    <string name="locate_college">Locate on map</string>
    <string name="visit_web">Visit Website</string>
    <string name="profile_fname">First Name</string>
    <string name="profile_lname">Last Name</string>
    <string name="profile_phone">Phone no</string>
    <string name="profile_email">Email</string>
    <string name="profile_clg_name">College Name</string>

    <string name="about_quiz">Think2exam now comes up with Quizes that help students to prepare for different Competitive exams.</string>

    <string name="quiz_rule_1">You have to login first (no need if you already have done).</string>
    <string name="quiz_rule_2">Quizzes are based on different Competitive exams. For each Exam section there are different subjects.</string>
    <string name="quiz_rule_3">For each Subject you will be given 10 questions.</string>
    <string name="quiz_rule_4">For each Question there will be 5 options.</string>
    <string name="quiz_rule_5">A timer will be set for 10 seconds. After 10 seconds next question will automatically appear.\nFor Questions which will have an abstract of paragraph, you will be given a paragraph to read. The question won\'t appear and the timer won\'t start until \'Show Question\' button is pressed.</string>
    <string name="quiz_rule_6">You will be rewarded 10XP for each correct answer. No negative points for wrong answers</string>
    <string name="quiz_rule_7">At the end of the quiz, if your total XPs are more than or equal to 50 out 100, you will win.</string>
    <string name="quiz_rule_8">You can check the correct answer from the \'Quiz Result\' screen.</string>
    <string name="title_my_account">My Account</string>
    <string name="slider_button_text">explore</string>
    <string name="result_win">Congratulations!</string>
    <string name="result_win_subtitle">You have passed this stage</string>
    <string name="result_button">Back to Topics</string>
    <string name="score_dummy">8/10</string>
    <string name="rules">Guide &amp; Rules</string>
    <string name="correctly_answered">Correctly answered</string>
    <string name="back_btn">Back Button</string>
    <string name="summary_level">Level 5</string>
    <string name="matches_played">Matches Played</string>
    <string name="wins">Wins</string>
    <string name="avg_points">Average Points</string>
    <string name="correct_answer">Correct Answers</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="did_not_answer">Did not answer</string>
    <string name="fee">Fee</string>
    <string name="duration">Duration</string>
    <string name="seats">Seats Available</string>
    <string name="min_qual">Minimum Qualification</string>
    <string name="min_agg">Minimum Aggregate</string>
    <string name="course_requirements">Course Requirements</string>
    <string name="about_course">About Course</string>
    <string name="about_think_2_exam">Think2exam is India\'s leading platform to provide all information regarding admission of different colleges from all over India free of cost.</string>
    <string name="founder">Founder</string>
    <string name="founder_name">Ramakanta M.</string>
    <string name="founder_qual">B.Tech</string>
    <string name="support">Support</string>
    <string name="contact_number">7004747230</string>
    <string name="contact_email">support@think2exam.com</string>
    <string name="about_reach_us">Reach us at</string>
    <string name="reach_us_text">Software Technology Parks Of India\nWebel STP II Building, 2nd Floor, DD - 53, Sector - V, Salt Lake, Kolkata\nWest Bengal,700091</string>
    <string name="home_quotes">India’s One Of The
Best Education Platforms</string>

    <!-- catergory string-->
    <string name="engineering">Engineering</string>
    <string name="management">Management</string>
    <string name="agriculture">Agriculture</string>
    <string name="medical_and_dental">Medical and Dental</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="nursing_and_paramedical">Nursing and Paramedical</string>
    <string name="education">Education</string>
    <string name="university">University</string>


    <!-- city -->
    <string name="bengaluru">Bengaluru</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="chennai">Chennai</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="mumbai">Mumbai</string>
    <string name="jaipur">Jaipur</string>
    <string name="kolkata">Kolkata</string>

    <!-- state -->

    <string name="uttar_pradesh">Uttar Pradesh</string>
    <string name="andra_pradesh">Andhra Pradesh</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="karnataka">Karnataka</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="tamil_nadu">Tamil Nadu</string>

    <!-- prestigious college -->

    <string name="iit">IIT</string>
    <string name="nit">NIT</string>
    <string name="aiims">AIIMS</string>
    <string name="iim">IIM</string>


    <string name="all_category">All Category</string>
    <string name="all_states">All State</string>
    <string name="all_cities">All City</string>

    <string name="quiz_title">Quiz</string>
    <string name="logging_in">Logging in...</string>
    <string name="option_5">Option 5</string>
    <string name="no_questions">No Questions Available</string>


    <string name="login_text">Login to Think2Exam</string>
    <string name="terms"><u>Terms</u></string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="developers"><u>Developers</u></string>
    <string name="enter_mobile_no">Enter your mobile number</string>
    <string name="sign_in_text">Login to your account</string>
    <string name="send_otp_instruction">Tap Next to verify your account. An SMS may be sent to verify your number.</string>
    <string name="enter_otp">Enter the code that was sent to</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Join Now</string>
    <string name="user_exist">* User already exists</string>
    <string name="user_not_exist">* User doesn\'t exists</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="forgot_password_instruction">Tap Next to Recover your account. An SMS may be sent to verify your number.</string>
    <string name="developers1">Dhrubajit Sarkar</string>
    <string name="developers2">Prateek Kumar Oraon</string>
    <string name="third_party_res">Open Source Licenses</string>
    <string name="paragraph">Paragraph</string>
    <string name="show_question">Show question</string>
    <string name="apply_internship">Apply for Internship</string>
    <string name="apply">APPLY NOW</string>
    <string name="internship_abstract">Think2Exam provide in-office and work from internship to students in the field of Web and Android application development.\nStudents having previous experience in the mentioned areas can apply to the internship.\nWe will contact you in few days</string>
    <string name="how_to_play">How to play</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="result_check_ans_btn">Check Answers</string>
    <string name="quiz_proceed_play">Proceed to play</string>
    <string name="skip">Skip question</string>

</resources>
