<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InternshipActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/internship_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:src="@drawable/think_2_exam_logo"
        app:layout_constraintTop_toBottomOf="@id/internship_app_bar_layout"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/internship_abstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/internship_abstract"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintTop_toBottomOf="@id/internship_logo"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/internship_main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/internship_abstract">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/internship_last_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="1"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/internship_last_name"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/internship_phone_no_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="1"
                android:maxLines="1"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/internship_phone_no"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/internship_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="1"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/internship_email"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/internship_first_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="1"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/internship_first_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/internship_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_lname"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/internship_first_name_edit"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/internship_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_email"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/internship_phone_no_edit"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/internship_clg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_clg_name"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/internship_email_edit"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/internship_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_fname"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/internship_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/profile_phone"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/internship_last_name_edit"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/internship_college_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ems="1"
                android:maxLines="1"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/internship_clg_name"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/internship_main_card">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/internship_apply_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/stadium_border_button"
            android:elevation="4dp"
            android:enabled="true"
            android:text="@string/apply"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/internship_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/internship_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/AppTheme"
            app:title="@string/apply_internship"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



</androidx.constraintlayout.widget.ConstraintLayout>