<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.QuizResultsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/quiz_result_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        style="@style/AppTheme"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme"
            app:titleTextColor="@color/white"
            android:theme="@style/ToolbarTheme"
            android:id="@+id/quiz_result_toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/result_image"
        android:src="@drawable/crown"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_result_app_bar"
        android:layout_marginTop="75dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_text_title"
        android:text="@string/result_win"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_text_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/result_text_title"
        android:layout_marginTop="10dp"
        android:text="@string/result_win_subtitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/result_score_layout"
        app:layout_constraintTop_toBottomOf="@id/result_text_subtitle"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Your Score is: "
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="end"
            android:textAlignment="textEnd"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/result_score"
            android:layout_marginTop="10dp"
            android:text="80/100"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:gravity="start"
            android:textStyle="bold"
            android:textAlignment="textStart"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/correct_answer_text"
        app:layout_constraintTop_toBottomOf="@id/result_score_layout"
        android:text="@string/correctly_answered"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result_question_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/correct_answer_text"
        android:text="@string/score_dummy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_back_to_topic_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/stadium_border_button"
        android:enabled="true"
        android:text="@string/result_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/result_question_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>