<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_profile_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/AppTheme"
            app:title="About Applicaton"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">

       <LinearLayout
           android:id="@+id/default_ll"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:gravity="center">

           <ImageView
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:src="@drawable/col_logo_default"
               android:layout_gravity="center"
               android:layout_marginTop="40dp"
               android:layout_marginBottom="5dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Think2Exam"
               android:layout_margin="5dp"
               android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:textColor="@color/homeText"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/version"
               android:layout_marginBottom="20dp"
               android:textColor="@color/homeText"/>

       </LinearLayout>

        <LinearLayout
            android:id="@+id/developers_ll"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers"
                android:textColor="@color/homeText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/developers1"
                android:textColor="@color/homeText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers2"
                android:textColor="@color/homeText"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tpr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_library_black_24dp"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_party_res"
                android:layout_marginLeft="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/homeText"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_black_24dp"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:layout_marginLeft="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/homeText"/>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"/>


    </LinearLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>